# televoica

./: .env.example  .gitignore  Dockerfile  LICENSE  LOCAL_TESTING.md  README.md  docker-compose.yml  pyproject.toml
.github/: CI_SETUP.md  EXAMPLES_IMPROVEMENTS.md  FIXES_APPLIED.md  QUICK_REFERENCE.md  SETUP_SUMMARY.md  SIMPLIFIED_EXAMPLES.md  TROUBLESHOOTING.md
.github/workflows/: ci.yml  deploy-bot-service.yml  deploy-bot.yml  deploy-docker.yml  deploy-simple.yml  health-check.yml
docs/: DEPLOYMENT.md  GITHUB_ACTIONS_SETUP.md
examples/: README.md  bot_usage.py  config.yaml  standalone_usage.py
scripts/: README.md  health_check.py
televoica/: __init__.py
televoica/bot/: __init__.py  telegram_bot.py
televoica/cli/: __init__.py  main.py
televoica/config/: __init__.py  settings.py
televoica/core/: __init__.py  engine.py  providers.py
tests/: __init__.py  test_config.py
tests/core/: test_engine.py  test_providers.py
